--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build_render:
-    runs-on: ubuntu:latest
+    runs-on: ubuntu-latest
     steps:
       - name: Deploy to render
         run: curl ${{ secrets.RENDER_DEPLOY_HOOK  }}
