--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -8,5 +8,23 @@ jobs:
   build_render:
     runs-on: ubuntu-latest
     steps:
-      - name: Deploy to render
-        run: curl ${{ secrets.RENDER_DEPLOY_HOOK  }}
+
+    - name: Checkout code
+      uses: actions/checkout@v3
+    
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKER_HUB_USERNAME }}
+        password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+
+    - name: Build and Push Docker Image
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        push: true
+        tags: ${{ secrets.DOCKER_HUB_USERNAME }}/web-example-cloud:latest
+
+
+    - name: Deploy to render
+      run: curl ${{ secrets.RENDER_DEPLOY_HOOK  }}
